/***********************************************************************
X3 ChangeLog

2010-07-07  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/hash.h: Added support for user modes +D, +R, +W, +H, +L
	and +q.

	* src/opserv.c: Added support for user modes +D, +R, +W, +H, +L
	and +q.

	* src/proto-p10.c: Added support for user modes +D, +R, +W, +H,
	+L and +q.

2010-07-07  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/hash.h: Added support for user modes +z and +a and fixed
	some comments.

	* src/opserv.c: Added support for user modes +z and +a and
	added support to TRACE/ADDALERT CHECKRESTRICTIONS criteria for
	channel mode +a and +Z.

	* src/proto-p10.c: Added support for user modes +z and +a.

2010-07-07  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/opserv.c: Added support to TRACE/ADDALERT CHECKRESTRICTIONS
	criteria for channel mode +O and +r.

2010-07-03  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Removed extra 'is' from CSMSG_SMURF_TARGET.

2010-06-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fix for crash on BURST (B) message for a channel
	with +L, at least one ban or except, and no users.

2010-05-21  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/modcmd.c: Added support for fall back replacements in
	command bindings. For example if you specify $1n instead of $1,
	then the users nick will be used if param 1 is not supplied.

2010-05-14  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fix for NickServ NICKINFO using the wrong
	lastseen timestamp.

2010-05-13  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fixed support for channel mode +a (Admins only).

2010-05-12  Matthew Beeching  <jobe@mdbnet.co.uk>

	* tools/db.php: Rewrote parser function as a class and faster
	parsing.

2010-05-11  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added nick expiration support.

	* src/nickserv.h: Added nick expiration support.

	* x3.conf.example: Added nick expiration support.
