@@ -1,0 +1,11 @@
+/*
+ * version.h
+ *
+ * $Id$
+ */
+#ifndef INCLUDED_version_h
+#define INCLUDED_version_h
+
+extern const char *cvs_version;
+
+#endif /* INCLUDED_version_h */
